--- a/API/public/css/style.css
+++ b/API/public/css/style.css
@@ -912,7 +912,7 @@ a img.aligncenter {
 .first-section {
     position: relative;
     overflow: hidden;
-    height: 100%;	
+    height: 100vh;	
 	vertical-align: middle;
 }
 
@@ -2865,7 +2865,7 @@ body.host_version .first-section .effect-1.slide-btn::after{
 	color: #fff;
 	font-weight: 600;
 	text-transform: capitalize;
-	padding-top: 11%;
+	padding-top:21%;
 	font-size: 48px;
 	line-height: 0px;
 }
